<resources>
    <string name="app_name" translatable="false">Done App</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="title">Title</string>
    <string name="describtion">Description</string>
    <string name="update">UPDATE</string>
    <string name="add_new_task">Add New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_all">Delete all tasks?</string>
    <string name="are_you_sure">Are you sure you want to delete all tasks?</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="new_added">New Task added</string>
    <string name="please_fill">Please fill in the title</string>
    <string name="all_deleted">All tasks deleted</string>
    <string name="task_updated">Task Updated</string>
    <string name="done_button">ADD</string>
    <string name="get_inspiration">Get Inspiration</string>
    <string name="list">List</string>
    <string name="task_msg_please_connect_to_internet">Please Connect to the Internet to see the quote.</string>
    <string name="task_msg_confucius">Confucius</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="error_empty_title">title must not be empty</string>
    <string name="hello_there">Hello there, this is a simple To-Do App</string>
    <string name="developer_paul_sizon">Developer: Paul Sizon</string>
    <string name="my_email" translatable="false">Paul.Sizon@outlook.com</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="systemDeafult">System default</string>
    <string name="cancel">Cancel</string>
    <string name="contact">Contacts:</string>
    <string name="chooseTheme">Choose theme</string>
    <string name="edit">Edit task</string>
    <string name="taskUpdated">Task updated</string>
    <string name="chooseEmail">Choose Email Client...</string>
    <string name="Undo">Undo</string>
    <string name="Delete">Deleted</string>


</resources>