<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.mytodo.ui.list.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_newTaskFragment"
            app:destination="@id/taskFragment" />
        <argument
            android:name="currentTask"
            app:argType="com.example.mytodo.data.db.entity.Task"
            app:nullable="true"
            android:defaultValue="@null"/>

    </fragment>

    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.mytodo.ui.task.TaskFragment"
        android:label="@string/add_new_task"
        tools:layout="@layout/fragment_task">
        <argument
            android:name="task"
            app:argType="com.example.mytodo.data.db.entity.Task"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.mytodo.ui.MainActivity"
        android:label="MainActivity"/>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.mytodo.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

</navigation>