<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:transitionName="shared_element_container">


    <FrameLayout

        android:id="@+id/ltRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.task.TaskFragment">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/material_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="textNoSuggestions"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/describtion"
                android:inputType="textNoSuggestions">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDiscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:text="@string/done_button"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#eeeeee"
                android:textStyle="bold" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="528dp">


                <Button
                    android:id="@+id/btnMotivation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Inspiration_button"
                    android:elevation="2dp"
                    android:text="@string/get_inspiration"
                    android:textColor="@color/Inspiration_button_text"

                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.239" />

                <ProgressBar
                    android:id="@+id/pbProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnMotivation"
                    app:layout_constraintVertical_bias="0.173" />

                <TextView
                    android:id="@+id/tvMotivation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnMotivation"
                    app:layout_constraintVertical_bias="0.025" />

                <TextView
                    android:id="@+id/tvMotivation_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp"
                    android:text=""
                    android:textAlignment="viewEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMotivation"
                    app:layout_constraintVertical_bias="0.087" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </FrameLayout>
</layout>